implemented Cartesian Product. Added few helper functions